# monte-carlo-backtest-analyzer

./: .gitignore  README.md  catch_error.cjs  exportPdf.ts  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  benchmarkAttribution.ts  blockBootstrap.ts  convergenceDiagnostics.ts  correlatedResampling.ts  correlation.ts  distributionFitting.ts  drawdownDuration.ts  dynamicCopula.ts  evt.ts  garch.ts  index.css  mathUtils.ts  metricsValidity.ts  modelValidation.ts  ninjaTraderImport.ts  pathSimulator.ts  portfolioEngine.ts  positionSizing.ts  regimeSegmentation.ts  reportGenerator.tsx  riskMetrics.ts  runHistory.ts  simulationEngine.ts  simulationWorker.ts  slippageModel.ts  stressTesting.ts  timestampAnalytics.ts  types.ts  vite-env.d.ts  walkForward.ts
src/__tests__/: e2e_real_data.test.ts  institutional.test.ts  sanity_institutional.test.ts
src/components/: AttributionPanel.tsx  ConvergencePanel.tsx  EVTPanel.tsx  EmptyHero.tsx  ExportModal.tsx  HiddenChartCapture.tsx  HistoricalStatsPanel.tsx  InstitutionalMetricsPanel.tsx  MethodologyPanel.tsx  ModelValidationPanel.tsx  MultiFactorPanel.tsx  Plots.tsx  PortfolioPanel.tsx  PortfolioRegimePanel.tsx  PositionSizingPanel.tsx  RunHistoryPanel.tsx  StressTestPanel.tsx  TimestampAnalyticsPanel.tsx  (+1 more)
wasm-engine/: Cargo.toml
wasm-engine/pkg/: wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm
wasm-engine/pkg-node/: package.json  wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm  wasm_engine_bg.wasm.d.ts
wasm-engine/src/: distribution.rs  lib.rs  math.rs  metrics.rs  models.rs
